Task5/admin-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-front-end-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-front-end-app
  template:
    metadata:
      labels:
        app: admin-front-end-app
        role: admin-front-end
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-front-end-app
spec:
  selector:
    app: admin-front-end-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
